:lipstick: Add TailWind

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -10,6 +10,7 @@ import background from '../assets/background.svg';
 			<a href="https://astro.build"
 				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
 			>
+			<h1 class="text-3l font-bold underline text-blue-400">Hello TailWindCSS v4</h1>
 			<h1>
 				To get started, open the <code><pre>src/pages</pre></code> directory in your project.
 			</h1>
