--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,34 @@
 ---
-import Welcome from "components/Welcome.astro";
+import { getCollection } from "astro:content";
 import Layout from "layouts/Layout.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const posts = (await getCollection("blog")).sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
 <Layout>
-  <Welcome />
+  <main>
+    <section>
+      <h1 class="text-5xl font-bold">kona blog</h1>
+      <a href="/about">/about</a>
+      <a href="/blog">/blog</a>
+      <h1 class="text-3l font-bold underline text-blue-400">Hello TailWindCSS v4</h1>
+
+      {
+        posts.map((post) => (
+          <a href={`/blog/${post.slug}/`}>
+            <div class="flex flex-col gap-2 p-4 border-b border-gray-300">
+              <time class="date">
+                {new Date(post.data.date).toLocaleDateString("ja-JP", {
+                  year: "numeric",
+                  month: "2-digit",
+                  day: "2-digit",
+                })}
+              </time>
+              <h1 class="text-2xl">{post.data.title}</h1>
+              <p class="text-sm">{post.data.description}</p>
+            </div>
+          </a>
+        ))
+      }
+    </section>
+  </main>
 </Layout>
