:lipstick: Add base design
use 'https://github.com/tailwindlabs/tailwindcss-typography'

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,14 @@
 ---
-//** サイトについての情報を記載するページ */
+//** 作者についての情報を記載するページ */
 
-import Layout from "layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
   <div id="container">
     <main>
       <section id="hero">
-        <h1 class="text-3l font-bold">About page</h1>
+        <h1 class="text-3l font-bold">作者についての情報を記載するページ</h1>
       </section>
     </main>
   </div>
