--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import "styles/global.css";
+import "@/styles/global.css";
+import Header from "@/components/Header.astro";
 
 const { title } = Astro.props;
 ---
@@ -14,6 +15,9 @@ const { title } = Astro.props;
     <title>{title ? title : "kona blog"}</title>
   </head>
   <body>
-    <slot />
+    <div class="px-10 max-w-4xl mx-auto my-0">
+      <Header />
+      <slot />
+    </div>
   </body>
 </html>
