--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,8 @@
+---
+import { Image } from "astro:assets";
+import logoImage from "@/images/logo.jpg";
+---
+
 <header>
   <nav>
     <div
@@ -8,7 +13,7 @@
           href="/"
           class="flex items-center space-x-3 rtl:space-x-reverse hover:text-muted-foreground transition-all duration-200"
         >
-          <img src="/favicon.svg" class="h-8 rounded-sm" alt="logo画像" />
+          <Image src={logoImage} width={32} height={32} alt="logo画像" class="rounded-md" />
           <span class="self-center text-2xl font-bold whitespace-nowrap">kona blog</span>
         </a>
       </div>
