--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -10,9 +10,10 @@ export async function getStaticPaths() {
     props: post,
   }));
 }
+
 type Props = CollectionEntry<"blog">;
 
-const post = Astro.props;
+const post: Props = Astro.props;
 const { Content } = await render(post);
 ---
 
