:lipstick: ヘッダーのスタイルを調整し、ブログタイトルを日本語に変更 :memo: ブログコレクションのスキーマを更新し、tagsとdescriptionをオプションに設定 :art: ブログレイアウトのスタイルを改善し、プローズのスタイルを追加 :lipstick: グローバルCSSのフォント設定を修正し、カラーパレットを整理

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,16 +5,14 @@ import logoImage from "@/images/logo.jpg";
 
 <header>
   <nav>
-    <div
-      class="max-w-screen border-b-1 flex flex-wrap items-center justify-between mx-auto pt-5 pb-5 max-[450px]:flex-col"
-    >
+    <div class="max-w-screen border-b-1 flex flex-wrap items-center justify-between mx-auto py-4 max-[450px]:flex-col">
       <div class="">
         <a
           href="/"
-          class="flex items-center space-x-3 rtl:space-x-reverse hover:text-muted-foreground transition-all duration-200"
+          class="flex items-center space-x-2 rtl:space-x-reverse hover:text-muted-foreground transition-all duration-200"
         >
           <Image src={logoImage} width={32} height={32} alt="logo画像" class="rounded-md" />
-          <span class="self-center text-2xl font-bold whitespace-nowrap">kona blog</span>
+          <span class="self-center text-2xl font-bold whitespace-nowrap font-sans">こなぶろぐ</span>
         </a>
       </div>
 
