--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -10,10 +10,14 @@ const { title } = Astro.props;
     class="py-5 prose max-w-none
       prose-h1:text-3xl/15 prose-h1:mt-10 prose-h1:mb-3.5 prose-h1:border-b-2
       prose-h2:text-2xl/10 prose-h2:mb-2.5 prose-h2:border-b-2
-      prose-h3:text-xl
+      prose-h3:text-xl prose-h3:mt-10
+      prose-strong:font-bold prose-strong:text-black
       prose-a:text-link prose-a:hover:text-link-hover
       prose-li:m-0
-      prose-code:before:hidden prose-code:after:hidden prose-code:bg-code prose-code:py-1 prose-code:px-2 prose-code:rounded-sm prose-code:font-thin prose-code:align-[.08em]"
+      prose-p:[&>code]:before:hidden prose-p:[&>code]:after:hidden prose-p:[&>code]:bg-slate-200 prose-p:[&>code]:py-1 prose-p:[&>code]:px-2 prose-p:[&>code]:rounded-sm prose-p:[&>code]:font-thin prose-p:[&>code]:align-[.08em]
+      prose-blockquote:text-blockquote
+      prose-th:p-2 prose-th:align-middle prose-th:text-center prose-th:border prose-th:border-slate-200 prose-th:bg-slate-100
+      prose-td:p-2 prose-td:border prose-td:border-slate-200"
   >
     <slot />
   </div>
