ページネーションの実装

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import logoImage from "@/images/logo.jpg";
+import logoImage from "@/images/logo.svg";
 ---
 
 <header>
