--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
-/* @import url("https://rsms.me/inter/inter.css"); */
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 @import "tw-animate-css";
 
+@custom-variant dark (&:is(.dark *));
+
 body {
   margin: 0;
   padding: 0;
-  /* font-family: "Inter", "Noto Sans JP", sans-serif; */
   font-family: "Noto Sans JP", sans-serif;
 }
 
