--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 <Layout title={title}>
   <div
     class="py-10 prose max-w-none
-      prose-h1:text-3xl/15 prose-h1:mt-10 prose-h1:mb-3.5 prose-h1:border-b-2
+      prose-h1:text-3xl/12 prose-h1:mt-10 prose-h1:mb-3.5 prose-h1:border-b-2
       prose-h2:text-2xl/10 prose-h2:mb-2.5 prose-h2:border-b-2
       prose-h3:text-xl prose-h3:mt-10
       prose-strong:font-bold prose-strong:text-black
@@ -17,7 +17,8 @@ const { title } = Astro.props;
       prose-p:[&>code]:before:hidden prose-p:[&>code]:after:hidden prose-p:[&>code]:bg-slate-200 prose-p:[&>code]:py-1 prose-p:[&>code]:px-2 prose-p:[&>code]:rounded-sm prose-p:[&>code]:font-thin prose-p:[&>code]:align-[.08em]
       prose-blockquote:text-blockquote
       prose-th:p-2 prose-th:align-middle prose-th:text-center prose-th:border prose-th:border-slate-200 prose-th:bg-slate-100
-      prose-td:p-2 prose-td:border prose-td:border-slate-200"
+      prose-td:p-2 prose-td:border prose-td:border-slate-200
+      prose-img:w-full prose-img:rounded-md prose-img:mx-auto prose-img:shadow-lg prose-img:sm:w-3/4"
   >
     <slot />
   </div>
