--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
     <title>{title ? title : "kona blog"}</title>
   </head>
   <body>
-    <div class="px-10 max-w-4xl mx-auto my-0">
+    <div class="px-4 sm:px-10 max-w-4xl mx-auto my-0 wrap-anywhere">
       <Header />
       <slot />
     </div>
