--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
 import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
 
 const { title } = Astro.props;
 ---
@@ -18,6 +19,7 @@ const { title } = Astro.props;
     <div class="px-4 sm:px-10 max-w-4xl mx-auto my-0 wrap-anywhere">
       <Header />
       <slot />
+      <Footer />
     </div>
   </body>
 </html>
