AboutページにGitHubリンクを設置

--- a/src/components/LinkCard.astro
+++ b/src/components/LinkCard.astro
@@ -1,4 +1,7 @@
 ---
+// URLからOpen Graphデータを取得してカード形式で表示するコンポーネント
+// 使用方法: <LinkCard url="https://example.com" />
+
 import type { OgObject } from "open-graph-scraper/types";
 import ogs from "open-graph-scraper";
 
