--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -2,10 +2,16 @@
 import "@/styles/global.css";
 import Layout from "@/layouts/Layout.astro";
 
-const { title } = Astro.props;
+interface Props {
+  title: string;
+  description?: string;
+  ogImage?: string;
+}
+
+const { title, description, ogImage } = Astro.props;
 ---
 
-<Layout title={title}>
+<Layout title={title} description={description} ogImage={ogImage}>
   <div
     class="py-10 prose max-w-none
       prose-h1:text-3xl/12 prose-h1:mt-10 prose-h1:mb-3.5 prose-h1:border-b-2
