ブログタイトルからOGP画像を動的生成

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -16,7 +16,8 @@ type Props = CollectionEntry<"blog">;
 const post: Props = Astro.props;
 const { Content } = await render(post);
 
-const ogImageSrc = post.data.ogImage?.src;
+// Use dynamic OGP image
+const ogImageSrc = `/blog/${post.slug}.og.png`;
 ---
 
 <BlogLayout
